Új multithread betöltés, opció a jegyzetek memóriában tárolására, minden ami lehet final, GitHub linkelve, Logokat el lehet érni